Grace/tests/gibbs/errors/t073.grace
// ERROR = P1013
def add = { a, b
    a + b
}
